# Generated by Django 4.2.7 on 2026-01-11 20:21

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('bookings', '0009_takeoutorder_takeoutorderitem_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='MenuOverride',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date_from', models.DateField(verbose_name='Дата начала')),
                ('date_to', models.DateField(blank=True, null=True, verbose_name='Дата окончания')),
                ('is_active', models.BooleanField(default=True, verbose_name='Активно')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата создания')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Дата обновления')),
            ],
            options={
                'verbose_name': 'Переопределение меню',
                'verbose_name_plural': 'Переопределения меню',
                'ordering': ['-date_from'],
            },
        ),
        migrations.CreateModel(
            name='WeeklyMenu',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('day_of_week', models.IntegerField(choices=[(0, 'Понедельник'), (1, 'Вторник'), (2, 'Среда'), (3, 'Четверг'), (4, 'Пятница'), (5, 'Суббота'), (6, 'Воскресенье')], unique=True, verbose_name='День недели')),
                ('is_active', models.BooleanField(default=True, verbose_name='Активно')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Дата создания')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Дата обновления')),
            ],
            options={
                'verbose_name': 'Еженедельное меню',
                'verbose_name_plural': 'Еженедельные меню',
                'ordering': ['day_of_week'],
            },
        ),
        migrations.CreateModel(
            name='WeeklyMenuItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('order', models.PositiveIntegerField(default=0, verbose_name='Порядок сортировки')),
                ('dish', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='weekly_menu_items', to='bookings.dish', verbose_name='Блюдо')),
                ('menu', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='bookings.weeklymenu', verbose_name='Меню')),
            ],
            options={
                'verbose_name': 'Блюдо в еженедельном меню',
                'verbose_name_plural': 'Блюда в еженедельном меню',
                'ordering': ['order', 'dish__name'],
            },
        ),
        migrations.CreateModel(
            name='MenuOverrideItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('action', models.CharField(choices=[('add', 'Добавить'), ('remove', 'Убрать')], default='add', max_length=10, verbose_name='Действие')),
                ('order', models.PositiveIntegerField(default=0, verbose_name='Порядок сортировки')),
                ('dish', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='menu_override_items', to='bookings.dish', verbose_name='Блюдо')),
                ('override', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='bookings.menuoverride', verbose_name='Переопределение')),
            ],
            options={
                'verbose_name': 'Блюдо в переопределении меню',
                'verbose_name_plural': 'Блюда в переопределении меню',
                'ordering': ['order', 'dish__name'],
            },
        ),
        migrations.AddIndex(
            model_name='menuoverride',
            index=models.Index(fields=['date_from', 'date_to'], name='bookings_me_date_fr_c3f388_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='weeklymenuitem',
            unique_together={('menu', 'dish')},
        ),
        migrations.AlterUniqueTogether(
            name='menuoverrideitem',
            unique_together={('override', 'dish')},
        ),
    ]
