# Generated by Django 3.2.25 on 2026-03-28 16:59

from django.conf import settings
import django.core.validators
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('bookings', '0011_remove_takeout_refactor_weekly_menu'),
    ]

    operations = [
        # Состояние миграций всё ещё содержит индекс по удалённому полю client (0001);
        # SQLite при AddField пересоздаёт таблицу и падает, если индекс ссылается на несуществующее поле.
        migrations.SeparateDatabaseAndState(
            state_operations=[
                migrations.RemoveIndex(
                    model_name='reservation',
                    name='bookings_re_client__123456_idx',
                ),
            ],
            database_operations=[],
        ),
        migrations.CreateModel(
            name='DishReview',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('rating', models.PositiveSmallIntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(5)], verbose_name='Оценка')),
                ('comment', models.TextField(blank=True, verbose_name='Комментарий')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name': 'Отзыв о блюде',
                'verbose_name_plural': 'Отзывы о блюдах',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='News',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=200, verbose_name='Заголовок')),
                ('summary', models.CharField(blank=True, max_length=500, verbose_name='Кратко')),
                ('body', models.TextField(verbose_name='Текст')),
                ('published_at', models.DateTimeField(verbose_name='Дата публикации')),
                ('is_published', models.BooleanField(db_index=True, default=False, verbose_name='Опубликовано')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Новость',
                'verbose_name_plural': 'Новости',
                'ordering': ['-published_at', '-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Promotion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200, verbose_name='Название')),
                ('description', models.TextField(blank=True, verbose_name='Описание для клиента')),
                ('kind', models.CharField(choices=[('single_dish', 'Одно блюдо'), ('combo', 'Комбо (набор блюд)')], max_length=20, verbose_name='Тип')),
                ('discount_type', models.CharField(choices=[('percent', 'Процент от суммы'), ('fixed_off', 'Фиксированная скидка (руб.)')], max_length=20, verbose_name='Тип скидки')),
                ('discount_value', models.DecimalField(decimal_places=2, help_text='Процент (0–100) или сумма в рублях в зависимости от типа', max_digits=10, validators=[django.core.validators.MinValueValidator(0)], verbose_name='Значение скидки')),
                ('valid_from', models.DateTimeField(verbose_name='Действует с')),
                ('valid_to', models.DateTimeField(verbose_name='Действует до')),
                ('is_active', models.BooleanField(db_index=True, default=True, verbose_name='Активна')),
            ],
            options={
                'verbose_name': 'Акция',
                'verbose_name_plural': 'Акции',
                'ordering': ['-valid_from'],
            },
        ),
        migrations.CreateModel(
            name='PromotionComboItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('min_quantity', models.PositiveIntegerField(default=1, validators=[django.core.validators.MinValueValidator(1)], verbose_name='Мин. количество')),
            ],
            options={
                'verbose_name': 'Позиция комбо',
                'verbose_name_plural': 'Позиции комбо',
                'ordering': ['promotion', 'dish__name'],
            },
        ),
        migrations.CreateModel(
            name='VenueComplaint',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('subject', models.CharField(max_length=200, verbose_name='Тема')),
                ('message', models.TextField(verbose_name='Текст жалобы')),
                ('status', models.CharField(choices=[('new', 'Новая'), ('seen', 'Просмотрена'), ('closed', 'Закрыта')], db_index=True, default='new', max_length=20, verbose_name='Статус')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'verbose_name': 'Жалоба на заведение',
                'verbose_name_plural': 'Жалобы на заведение',
                'ordering': ['-created_at'],
            },
        ),
        migrations.AddField(
            model_name='reservation',
            name='promotion_discount_total',
            field=models.DecimalField(decimal_places=2, default=0, max_digits=10, validators=[django.core.validators.MinValueValidator(0)], verbose_name='Сумма скидки по акции'),
        ),
        migrations.AddField(
            model_name='venuecomplaint',
            name='user',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='venue_complaints', to=settings.AUTH_USER_MODEL, verbose_name='Пользователь'),
        ),
        migrations.AddField(
            model_name='promotioncomboitem',
            name='dish',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='promotion_combo_entries', to='bookings.dish', verbose_name='Блюдо в наборе'),
        ),
        migrations.AddField(
            model_name='promotioncomboitem',
            name='promotion',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='combo_items', to='bookings.promotion', verbose_name='Акция'),
        ),
        migrations.AddField(
            model_name='promotion',
            name='target_dish',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='single_promotions', to='bookings.dish', verbose_name='Блюдо (только для типа «одно блюдо»)'),
        ),
        migrations.AddField(
            model_name='dishreview',
            name='dish',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='reviews', to='bookings.dish', verbose_name='Блюдо'),
        ),
        migrations.AddField(
            model_name='dishreview',
            name='reservation_dish',
            field=models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='review', to='bookings.reservationdish', verbose_name='Строка заказа'),
        ),
        migrations.AddField(
            model_name='dishreview',
            name='user',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='dish_reviews', to=settings.AUTH_USER_MODEL, verbose_name='Пользователь'),
        ),
        migrations.AddField(
            model_name='reservation',
            name='applied_promotion',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reservations', to='bookings.promotion', verbose_name='Применённая акция'),
        ),
        migrations.AddIndex(
            model_name='venuecomplaint',
            index=models.Index(fields=['user', '-created_at'], name='bookings_ve_user_id_be04f7_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='promotioncomboitem',
            unique_together={('promotion', 'dish')},
        ),
        migrations.AddIndex(
            model_name='promotion',
            index=models.Index(fields=['is_active', 'valid_from', 'valid_to'], name='bookings_pr_is_acti_6e2b62_idx'),
        ),
    ]
