# Generated by Django 3.2.25 on 2026-03-28 18:05

import django.core.validators
from django.db import migrations, models
import django.db.models.deletion


def forwards_copy_applied_promotion(apps, schema_editor):
    Reservation = apps.get_model('bookings', 'Reservation')
    Applied = apps.get_model('bookings', 'ReservationAppliedPromotion')
    for r in Reservation.objects.filter(applied_promotion_id__isnull=False).iterator():
        Applied.objects.get_or_create(
            reservation_id=r.pk,
            promotion_id=r.applied_promotion_id,
            defaults={'discount_amount': r.promotion_discount_total or 0},
        )


def backwards_noop(apps, schema_editor):
    pass


class Migration(migrations.Migration):

    dependencies = [
        ('bookings', '0013_reservation_order_totals'),
    ]

    operations = [
        migrations.CreateModel(
            name='ReservationAppliedPromotion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('discount_amount', models.DecimalField(decimal_places=2, default=0, max_digits=10, validators=[django.core.validators.MinValueValidator(0)], verbose_name='Скидка по этой акции')),
                ('promotion', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='reservation_applied_rows', to='bookings.promotion', verbose_name='Акция')),
                ('reservation', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='applied_promotion_links', to='bookings.reservation', verbose_name='Бронирование')),
            ],
            options={
                'verbose_name': 'Применённая акция',
                'verbose_name_plural': 'Применённые акции',
                'ordering': ['promotion__name'],
                'unique_together': {('reservation', 'promotion')},
            },
        ),
        migrations.RunPython(forwards_copy_applied_promotion, backwards_noop),
    ]
